# civix

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  source-package-conventions.md  testing-guidelines.md
examples/: README.md  sdk_export_chart.py  sdk_fetch_preview.py
notebooks/: sdk_pipeline_quickstart.ipynb
src/civix/: __init__.py  __init__.pyi  __main__.py
src/civix/core/: __init__.py
src/civix/core/adapters/: __init__.py  errors.py  http.py  models.py
src/civix/core/adapters/models/: adapter.py
src/civix/core/drift/: __init__.py  analysis.py  observation.py  observers.py  report.py  spec.py
src/civix/core/drift/models/: __init__.py
src/civix/core/export/: __init__.py  manifest.py
src/civix/core/export/models/: __init__.py  manifest.py
src/civix/core/identity/: __init__.py  models.py
src/civix/core/identity/models/: __init__.py
src/civix/core/mapping/: __init__.py  errors.py  models.py  parsers.py
src/civix/core/mapping/models/: __init__.py  mapper.py
src/civix/core/observations/: __init__.py  models.py
src/civix/core/pipeline/: __init__.py  observers.py  runner.py
src/civix/core/ports/: __init__.py
src/civix/core/ports/models/: __init__.py
src/civix/core/provenance/: __init__.py  models.py
src/civix/core/provenance/models/: __init__.py  provenance.py
src/civix/core/quality/: __init__.py  models.py
src/civix/core/quality/models/: __init__.py
src/civix/core/snapshots/: __init__.py  models.py
src/civix/core/snapshots/models/: __init__.py  snapshot.py
src/civix/core/sources/: __init__.py  errors.py  models.py
src/civix/core/spatial/: __init__.py  models.py
src/civix/core/spatial/models/: __init__.py  geometry.py
src/civix/core/taxonomy/: __init__.py
src/civix/core/taxonomy/models/: __init__.py  category.py
src/civix/core/temporal/: __init__.py  clock.py  validators.py
src/civix/core/temporal/models/: __init__.py  period.py
src/civix/core/validation/: __init__.py  models.py  validator.py
src/civix/core/validation/models/: __init__.py  report.py
src/civix/domains/: __init__.py
src/civix/domains/building_energy_emissions/: __init__.py
src/civix/domains/building_energy_emissions/adapters/: __init__.py
src/civix/domains/building_energy_emissions/models/: __init__.py  common.py  compliance.py  keys.py  metric.py  report.py  subject.py
src/civix/domains/business_licences/: __init__.py  models.py
src/civix/domains/business_licences/adapters/: __init__.py
src/civix/domains/business_licences/models/: __init__.py  licence.py
src/civix/domains/business_licenses/: __init__.py  models.py
src/civix/domains/hazard_mitigation/: __init__.py
src/civix/domains/hazard_mitigation/adapters/: __init__.py
src/civix/domains/hazard_mitigation/models/: __init__.py  common.py  funding.py  geography.py  organization.py  project.py  transaction.py
src/civix/domains/hazard_risk/: __init__.py
src/civix/domains/hazard_risk/adapters/: __init__.py
src/civix/domains/hazard_risk/models/: __init__.py  area.py  (+4 more)
src/civix/domains/mobility_observations/: __init__.py
src/civix/domains/permits/: __init__.py
src/civix/domains/procurement/: __init__.py
src/civix/domains/transportation_safety/: __init__.py
src/civix/infra/: __init__.py  http.py
src/civix/infra/exporters/: __init__.py
src/civix/infra/sources/: __init__.py
src/civix/sdk/: __init__.py  client.py  models.py
src/civix/sdk/datasets/: __init__.py  _helpers.py  building_energy_emissions.py  business_licences.py  hazard_mitigation.py  hazard_risk.py  mobility_observations.py  namespaces.py  transportation_safety.py
tests/: conftest.py  test_cli.py  test_import.py
tests/core/: test_adapters.py  test_drift.py  test_drift_observers.py  test_identity.py  test_mapping.py  test_observations.py  test_package_initializers.py  test_pipeline.py  test_pipeline_observers.py  test_provenance.py  test_quality.py  test_snapshots.py  test_sources.py  test_spatial.py  test_taxonomy.py  test_taxonomy_drift.py  test_temporal.py
tests/core/export/: test_manifest.py
tests/core/identity/: test_identifiers.py
tests/core/mapping/: test_mapping.py
tests/core/pipeline/: test_observers.py  test_pipeline.py
tests/core/ports/: test_adapter.py
tests/core/provenance/: test_provenance.py
tests/core/quality/: test_quality.py
tests/core/snapshots/: test_snapshots.py
tests/core/spatial/: test_spatial.py
tests/core/taxonomy/: test_taxonomy.py
tests/core/temporal/: test_temporal.py
tests/core/validation/: test_models.py  test_validator.py
tests/domains/: test_business_licences.py  test_business_licenses.py  test_transportation_safety.py
tests/domains/building_energy_emissions/: test_models.py
tests/domains/business_licences/: test_models.py
tests/domains/hazard_mitigation/: __init__.py  test_models.py
tests/domains/hazard_mitigation/adapters/: __init__.py
tests/domains/hazard_risk/: test_models.py
tests/domains/hazard_risk/adapters/: __init__.py
tests/domains/mobility_observations/: __init__.py  test_models.py
tests/domains/mobility_observations/adapters/: __init__.py
tests/domains/transportation_safety/: test_models.py
tests/domains/transportation_safety/adapters/: __init__.py
tests/infra/: test_http.py
tests/infra/exporters/drift/: test_writer.py
tests/infra/exporters/json/: test_writer_integration.py  test_writer_unit.py
tests/infra/exporters/parquet/: __init__.py  test_writer_integration.py  test_writer_unit.py
tests/infra/exporters/validation/: test_writer.py
tests/infra/sources/: __init__.py
tests/infra/sources/ckan/: __init__.py  test_client.py
tests/infra/sources/csv/: test_client.py
tests/infra/sources/openfema/: __init__.py  test_client.py
tests/infra/sources/socrata/: __init__.py  test_client.py
tests/infra/sources/us/: __init__.py
tests/sdk/: test_client.py  test_datasets.py  test_transportation_safety_products.py
tests/sources/ca/vancouver_business_licences/: test_adapter_integration.py  test_adapter_live.py  test_adapter_unit.py  test_mapper_integration.py  test_mapper_unit.py
(+448 files in other folders)
