[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "civix"
version = "0.1.0"
description = "Tooling scaffold for civic data normalization."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27",
    "openpyxl>=3.1.5",
    "pydantic>=2.7",
]

[project.scripts]
civix = "civix.__main__:main"

[project.optional-dependencies]
parquet = [
    "pyarrow>=24.0.0",
]
notebook = [
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "import-linter>=2.0",
    "pyarrow>=24.0.0",
    "pyright>=1.1.380",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.3.0",
    "respx>=0.21",
    "ruff>=0.12.0",
    "types-openpyxl>=3.1.5.20260408",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-q -m 'not live'"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: opt-in tests that hit real civic APIs; excluded by default",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/civix"]

[tool.importlinter]
root_packages = ["civix"]

# core is pure: no dependency on domains or infra.
[[tool.importlinter.contracts]]
name = "core stays pure"
type = "forbidden"
source_modules = ["civix.core"]
forbidden_modules = ["civix.domains", "civix.infra"]

# Top-level infra is cross-cutting only (http, exporters): it must not
# depend on any domain. Domain-owned adapters may still import civix.infra.
[[tool.importlinter.contracts]]
name = "top-level infra stays cross-cutting"
type = "forbidden"
source_modules = ["civix.infra"]
forbidden_modules = ["civix.domains"]

# Per-domain layering: a domain's models stay pure (no adapter or infra
# dependency). One entry per domain — extend when a new domain lands.
[[tool.importlinter.contracts]]
name = "domain models stay pure"
type = "forbidden"
source_modules = [
    "civix.domains.business_licences.models",
    "civix.domains.hazard_mitigation.models",
    "civix.domains.mobility_observations.models",
    "civix.domains.transportation_safety.models",
]
forbidden_modules = [
    "civix.domains.business_licences.adapters",
    "civix.domains.hazard_mitigation.adapters",
    "civix.domains.mobility_observations.adapters",
    "civix.domains.transportation_safety.adapters",
    "civix.infra",
]

# Source slices stay independent of each other across the whole project.
[[tool.importlinter.contracts]]
name = "source slices stay independent"
type = "independence"
modules = [
    "civix.domains.business_licences.adapters.sources.ca.calgary",
    "civix.domains.business_licences.adapters.sources.ca.edmonton",
    "civix.domains.business_licences.adapters.sources.ca.toronto",
    "civix.domains.business_licences.adapters.sources.ca.vancouver",
    "civix.domains.business_licences.adapters.sources.us.nyc",
    "civix.domains.transportation_safety.adapters.sources.us.chicago_crashes",
    "civix.domains.transportation_safety.adapters.sources.us.chicago_people",
    "civix.domains.transportation_safety.adapters.sources.us.chicago_vehicles",
    "civix.domains.transportation_safety.adapters.sources.us.nyc_crashes",
    "civix.domains.transportation_safety.adapters.sources.us.nyc_persons",
    "civix.domains.transportation_safety.adapters.sources.us.nyc_vehicles",
    "civix.domains.transportation_safety.adapters.sources.ca.toronto_ksi",
    "civix.domains.transportation_safety.adapters.sources.gb.stats19",
    "civix.domains.transportation_safety.adapters.sources.fr.baac",
    "civix.domains.mobility_observations.adapters.sources.us.chicago_traffic_tracker_regions",
    "civix.domains.mobility_observations.adapters.sources.us.chicago_traffic_tracker_segments",
    "civix.domains.mobility_observations.adapters.sources.us.nyc_bicycle_pedestrian_counts",
    "civix.domains.mobility_observations.adapters.sources.us.nyc_traffic_speeds",
    "civix.domains.mobility_observations.adapters.sources.us.nyc_traffic_volume_counts",
    "civix.domains.mobility_observations.adapters.sources.ca.toronto_bicycle_counters",
    "civix.domains.mobility_observations.adapters.sources.ca.toronto_turning_movement_counts",
    "civix.domains.mobility_observations.adapters.sources.fr.tmja_road_traffic",
    "civix.domains.hazard_mitigation.adapters.sources.ca.dmaf",
    "civix.domains.hazard_mitigation.adapters.sources.gb.fcerm",
    "civix.domains.hazard_mitigation.adapters.sources.us.fema_hma",
]

[[tool.importlinter.contracts]]
name = "exporter slices stay independent"
type = "independence"
modules = [
    "civix.infra.exporters.drift",
    "civix.infra.exporters.json",
    "civix.infra.exporters.parquet",
    "civix.infra.exporters.validation",
]

[[tool.importlinter.contracts]]
name = "infra source helpers stay independent"
type = "independence"
modules = [
    "civix.infra.sources.ckan",
    "civix.infra.sources.openfema",
    "civix.infra.sources.socrata",
]
